JT-3254 JT-3203 Right align, fix breakdown mapping

--- a/app/assets/stylesheets/components/_rating-score-item.scss
+++ b/app/assets/stylesheets/components/_rating-score-item.scss
@@ -47,9 +47,12 @@
     color: #999999;
     font-size: $font-size-s2;
   }
-  .horizontal > div {
-    display: inline;
-    padding-right: 5px;
+  .horizontal {
+    text-align: right;
+    > div {
+      display: inline;
+      padding-right: 5px;
+    }
   }
 }
 
